// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message box component snapshot renders the message box from logged in user 1`] = `
<li
  className="my-message-wrapper--h93b8ATj"
>
  <div
    className="chat-message--QnC2_lx7"
  >
    <p>
      test content 123
    </p>
  </div>
</li>
`;

exports[`Message box component snapshot renders the message box from other users 1`] = `
<li
  className="chat-message-wrapper--hp6HY0Bp"
>
  <div
    className="chat-message--QnC2_lx7"
  >
    <span>
      testUser
      :
    </span>
    <p>
      test content 123
    </p>
  </div>
</li>
`;
